--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -17,6 +17,7 @@
 @import 'why-us';
 @import 'choose';
 @import 'equipment';
+@import 'software';
 @import 'page-sidebar';
 @import 'page-header';
 @import 'page-footer';
