--- a/src/pages/index.hbs
+++ b/src/pages/index.hbs
@@ -30,6 +30,9 @@
             <a href="#business" class="intro__btn">
                 Выбрать кассу
             </a>
+            <a href="#contact-modal" class="intro__btn intro__btn--callback js-open-modal">
+                Отправить заявку
+            </a>
         </div>
     </div>
 </section>
@@ -412,7 +415,7 @@
     </div>
 </section>
 
-<section class="section">
+<section class="section" id="software">
     <div class="software">
         <div class="container">
             <div class="software__row">
