--- a/src/partials/components/sidebar.hbs
+++ b/src/partials/components/sidebar.hbs
@@ -25,7 +25,7 @@
                                 </a>
                             </li>
                             <li class="page-sidebar__nav-list-item">
-                                <a href="#" class="page-sidebar__nav-link">
+                                <a href="#software" class="page-sidebar__nav-link">
                                     <div class="page-sidebar__nav-link-text">
                                         ПО для бизнеса
                                     </div>
