--- a/src/scss/_contact-modal.scss
+++ b/src/scss/_contact-modal.scss
@@ -14,6 +14,18 @@
     visibility: hidden;
     transition: opacity 0.3s, visibility 0s linear 0.3s;
 
+    @include breakpoint(mobile) {
+        background-color: #fff;
+        padding-top: 1.6rem;
+        padding-bottom: 1.6rem;
+
+        .container {
+            display: flex;
+            flex-direction: column;
+            flex-grow: 1;
+        }
+    }
+
     &:not(.active) {
         right: calc(-1 * var(--sb-width, 0));
     }
@@ -25,17 +37,26 @@
 }
 
 .contact-modal__inner {
-    margin-left: auto;
-    background-color: #fff;
-    flex-grow: 1;
-    width: 45rem;
-    padding-top: 13rem;
-    padding-left: 4.4rem;
-    padding-right: 4.4rem;
-    padding-bottom: 3rem;
-    display: flex;
-    flex-direction: column;
-    position: relative;
+    @include breakpointMF(small-tablet) {
+        margin-left: auto;
+        background-color: #fff;
+        flex-grow: 1;
+        width: 45rem;
+        padding-top: 13rem;
+        padding-left: 4.4rem;
+        padding-right: 4.4rem;
+        padding-bottom: 3rem;
+        display: flex;
+        flex-direction: column;
+        position: relative;
+        
+    }
+
+    @include breakpoint(mobile) {
+        display: flex;
+        flex-direction: column;
+        flex-grow: 1;
+    }
 }
 
 .contact-modal__close {
@@ -58,6 +79,20 @@
         height: 1.2rem;
         fill: black;
     }
+
+    @include breakpoint(mobile) {
+        width: 3.6rem;
+        height: 3.6rem;
+        border: 1px solid rgba(0, 0, 0, 0.3);
+        margin-bottom: 1.5rem;
+        margin-left: auto;
+        position: static;
+        transform: none;
+        svg {
+            width: 0.8rem;
+            height: 0.8rem;
+        }
+    }
 }
 
 .contact-modal__small-heading {
@@ -67,6 +102,9 @@
     line-height: 1.2;
     text-transform: uppercase;
     margin-bottom: 1.5rem;
+
+    @include breakpoint(mobile) {
+    }
 }
 
 .contact-modal__large-heading {
@@ -76,6 +114,14 @@
     line-height: 110%;
     color: #000000;
     margin-bottom: 4.5rem;
+
+    @include breakpoint(mobile) {
+        font-style: normal;
+        font-weight: 600;
+        font-size: 2.6rem;
+        line-height: 105%;
+        margin-bottom: 2.5rem;
+    }
 }
 
 .contact-modal__form {
@@ -102,14 +148,16 @@
     }
 }
 
-
-
-
 .contact-modal__form-fields {
     display: grid;
     grid-template-columns: minmax(0, 1fr);
     grid-gap: 1rem;
     margin-bottom: 3rem;
+
+    @include breakpoint(mobile) {
+        grid-template-columns: minmax(0, 1fr);
+        grid-gap: 0.4rem;
+    }
 }
 
 .contact-modal__form-input {
@@ -137,12 +185,23 @@
     &.parsley-error {
         border-color: var(--primary-color);
     }
+
+    @include breakpoint(mobile) {
+        height: 4.7rem;
+        padding: 0 1.6rem;
+        border-radius: 2.5rem;
+    }
 }
 
 textarea.contact-modal__form-input {
     height: 13rem;
     padding-top: 1.5rem;
     padding-bottom: 1.5rem;
+
+    @include breakpoint(mobile) {
+        height: 11rem;
+      
+    }
 }
 
 .contact-modal__form-controls {
@@ -261,6 +320,10 @@ textarea.contact-modal__form-input {
     padding-top: 13rem;
     display: flex;
     flex-direction: column;
+
+    @include breakpoint(mobile) {
+        padding-top: 10rem;
+    }
 }
 
 .contact-modal__ok {
@@ -268,6 +331,11 @@ textarea.contact-modal__form-input {
     height: 6.8rem;
     object-fit: contain;
     margin-bottom: 2.5rem;
+    @include breakpoint(mobile) {
+        width: 4.4rem;
+        height: 4.4rem;
+        margin-bottom: 2rem;
+    }
 }
 
 .contact-modal__success-text {
@@ -276,4 +344,10 @@ textarea.contact-modal__form-input {
     line-height: 120%;
     color: #c1c1c1;
     font-family: var(--cofo);
+
+    @include breakpoint(mobile) {
+        font-weight: normal;
+        font-size: 1.4rem;
+        line-height: 120%;
+    }
 }
