--- a/src/scss/_partners.scss
+++ b/src/scss/_partners.scss
@@ -2,7 +2,6 @@
     display: flex;
     flex-direction: column;
     position: relative;
-   
 
     @include breakpointMF(small-tablet) {
         flex-grow: 1;
@@ -39,7 +38,7 @@
 
     @include breakpoint(mobile) {
         grid-template-columns: repeat(3, minmax(0, 1fr));
-        grid-gap: .4rem;
+        grid-gap: 0.4rem;
     }
 }
 
@@ -87,30 +86,96 @@
 }
 
 .partners__card-content {
-    // left: -0.5rem;
-    // right: -0.5rem;
+    @include breakpointMF(small-tablet) {
+        min-height: 100%;
+        left: 0;
+        right: 0;
 
-    // min-height: calc(100% + 1rem);
-    min-height: 100%;
-    left: 0;
-    right: 0;
+        top: 50%;
+        transform: translateY(-50%);
+        background-color: #fff;
+        background: #ffffff;
+        box-shadow: 0px 1.3rem 3.4rem rgba(0, 0, 0, 0.35);
+        border-radius: 2rem;
+        opacity: 0;
+        visibility: hidden;
+        transition: opacity 0.3s, visibility 0s linear 0.3s, transform 0.3s;
+        text-align: center;
+        padding: 2rem;
+        color: black;
+        position: absolute;
+        display: flex;
+        flex-direction: column;
+        z-index: 15;
+    }
 
-    top: 50%;
-    transform: translateY(-50%);
-    background-color: #fff;
-    background: #ffffff;
-    box-shadow: 0px 1.3rem 3.4rem rgba(0, 0, 0, 0.35);
-    border-radius: 2rem;
-    opacity: 0;
-    visibility: hidden;
-    transition: opacity 0.3s, visibility 0s linear 0.3s, transform 0.3s;
-    text-align: center;
-    padding: 2rem;
-    color: black;
+    @include breakpoint(mobile) {
+        background: rgba(0, 0, 0, 0.66);
+        display: flex;
+        flex-direction: column;
+        overflow-x: hidden;
+        -webkit-overflow-scrolling: touch;
+        position: fixed;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        padding: 2rem var(--content-padding);
+        opacity: 0;
+        visibility: hidden;
+        transition: opacity 0.3s, visibility 0s linear 0.3s;
+        z-index: 160;
+        &.active {
+            opacity: 1;
+            visibility: inherit;
+            transition: opacity 0.3s, visibility 0.3s;
+        }
+    }
+}
+
+.partners__card-close {
+    @include breakpointMF(small-tablet) {
+        display: none;
+    }
+
     position: absolute;
+    left: 50%;
+    top: 0;
+    transform: translate(-50%, -50%);
+    width: 4.4rem;
+    height: 4.4rem;
+    border-radius: 50%;
     display: flex;
     flex-direction: column;
-    z-index: 15;
+    align-items: center;
+    justify-content: center;
+    background: #ffffff;
+    border: 1px solid rgba(0, 0, 0, 0.3);
+    border-radius: 50%;
+    svg {
+        width: 1rem;
+        height: 1rem;
+        fill: black;
+    }
+}
+
+.partners__card-content-inner {
+    display: flex;
+    flex-direction: column;
+    flex-grow: 1;
+
+    @include breakpoint(mobile) {
+        padding: 2rem;
+        background: #ffffff;
+        border-radius: 2rem;
+        display: flex;
+        flex-direction: column;
+        margin: auto;
+        color: black;
+        position: relative;
+        padding-top: 4.5rem;
+        flex-grow: 0;
+    }
 }
 
 .partners__card-content-logo {
@@ -162,5 +227,16 @@
         width: 100%;
         height: 100%;
         fill: currentColor;
+    }
+}
+
+.partners__card-modal-link {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    @include breakpointMF(small-tablet) {
+        display: none;
     }
 }
