По модалкам решений

--- a/src/pages/index.hbs
+++ b/src/pages/index.hbs
@@ -370,7 +370,7 @@
                         </div>
                     </li>
                     <li class="solutions__list-item">
-                        <a href="#" class="solutions__card">
+                        <a href="#solution-modal-2" class="solutions__card">
                             <div class="solutions__card-bg">
                                 <img src="img/solutions/2.jpg" alt="" class="solutions__card-bg-image">
                             </div>
@@ -388,9 +388,128 @@
                                 </div>
                             </div>
                         </a>
+                        <div class="solutions__modal js-modal" id="solution-modal-2">
+                            <div class="solutions__modal-inner">
+                                <button class="solutions__modal-close js-close-modal">
+                                    <svg width="14" height="14" aria-hidden="true" class="icon-close">
+                                        <use xlink:href="#close"></use>
+                                    </svg>
+                                </button>
+                                <div class="solutions__modal-illustration">
+                                    <img src="img/device.webp" alt="" class="solutions__modal-illustration-image">
+                                    <div class="solutions__modal-feature" style="left: 35%; top: 50%;">
+                                        <div class="solutions__modal-feature-icon">
+                                            <svg width="14" height="14" aria-hidden="true" class="icon-close">
+                                                <use xlink:href="#close"></use>
+                                            </svg>
+                                        </div>
+                                        <div class="solutions__modal-feature-dropdown">
+                                            <div class="solutions__modal-feature-dropdown-inner">
+                                                Прием оплаты банковской картой Visa, Master Card, Золотая Корона
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="solutions__modal-content">
+                                    <h3 class="solutions__modal-heading">
+                                        Sigma 5 pay
+                                    </h3>
+                                    <div class="solutions__modal-text">
+                                        <p>
+                                            Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру сгенерировать
+                                            несколько абзацев более менее осмысленного текста рыбы на русском языке, а
+                                            начинающему оратору отточить навык публичных выступлений в домашних
+                                            условиях.
+                                        </p>
+                                    </div>
+                                    <div class="solutions__modal-accordions">
+                                        <div class="solutions__modal-accordion js-accordion">
+                                            <div class="solutions__modal-accordion-btn js-accordion-btn">
+                                                <span class="solutions__modal-accordion-btn-text">
+                                                    Технические характеристики
+                                                </span>
+
+                                                <svg width="14" height="14" aria-hidden="true" class="icon-plus">
+                                                    <use xlink:href="#plus"></use>
+                                                </svg>
+                                            </div>
+                                            <div class="solutions__modal-accordion-content js-accordion-content">
+                                                <div class="solutions__modal-accordion-content-inner">
+                                                    <p>
+                                                        Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру
+                                                        сгенерировать несколько абзацев более менее осмысленного текста
+                                                        рыбы
+                                                        на русском языке, а начинающему оратору отточить навык публичных
+                                                        выступлений в домашних условиях.
+                                                    </p>
+                                                    <p>
+                                                        Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру
+                                                        сгенерировать несколько абзацев более менее осмысленного текста
+                                                        рыбы
+                                                        на русском языке, а начинающему оратору отточить навык публичных
+                                                        выступлений в домашних условиях.
+                                                    </p>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="solutions__modal-accordion js-accordion">
+                                            <div class="solutions__modal-accordion-btn js-accordion-btn">
+
+                                                <span class="solutions__modal-accordion-btn-text">
+                                                    Инструкция
+                                                </span>
+                                                <svg width="14" height="14" aria-hidden="true" class="icon-plus">
+                                                    <use xlink:href="#plus"></use>
+                                                </svg>
+                                            </div>
+                                            <div class="solutions__modal-accordion-content js-accordion-content">
+                                                <div class="solutions__modal-accordion-content-inner">
+                                                    <p>
+                                                        Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру
+                                                        сгенерировать несколько абзацев более менее осмысленного текста
+                                                        рыбы
+                                                        на русском языке, а начинающему оратору отточить навык публичных
+                                                        выступлений в домашних условиях.
+                                                    </p>
+                                                    <p>
+                                                        Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру
+                                                        сгенерировать несколько абзацев более менее осмысленного текста
+                                                        рыбы
+                                                        на русском языке, а начинающему оратору отточить навык публичных
+                                                        выступлений в домашних условиях.
+                                                    </p>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <a href="#" class="solutions__modal-link">
+                                            <div class="solutions__modal-link-text">
+                                                Видео распаковки
+                                            </div>
+
+                                            <svg width="14" height="14" aria-hidden="true" class="icon-arrow-right">
+                                                <use xlink:href="#arrow-right"></use>
+                                            </svg>
+                                        </a>
+                                    </div>
+                                    <div class="solutions__modal-bottom-row">
+                                        <div class="solutions__modal-price">
+                                            <h4 class="solutions__modal-price-heading">
+                                                Стоимость
+                                            </h4>
+                                            <div class="solutions__modal-price-amount">
+                                                15000 ₽
+                                            </div>
+                                        </div>
+                                        <a href="#contact-modal" class="solutions__modal-apply-link js-open-modal">
+                                            Отправить заявку
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </li>
                     <li class="solutions__list-item">
-                        <a href="#" class="solutions__card">
+                        <a href="#solution-modal-3" class="solutions__card">
                             <div class="solutions__card-bg">
                                 <img src="img/solutions/3.jpg" alt="" class="solutions__card-bg-image">
                             </div>
@@ -408,6 +527,125 @@
                                 </div>
                             </div>
                         </a>
+                        <div class="solutions__modal js-modal" id="solution-modal-3">
+                            <div class="solutions__modal-inner">
+                                <button class="solutions__modal-close js-close-modal">
+                                    <svg width="14" height="14" aria-hidden="true" class="icon-close">
+                                        <use xlink:href="#close"></use>
+                                    </svg>
+                                </button>
+                                <div class="solutions__modal-illustration">
+                                    <img src="img/device.webp" alt="" class="solutions__modal-illustration-image">
+                                    <div class="solutions__modal-feature" style="left: 35%; top: 50%;">
+                                        <div class="solutions__modal-feature-icon">
+                                            <svg width="14" height="14" aria-hidden="true" class="icon-close">
+                                                <use xlink:href="#close"></use>
+                                            </svg>
+                                        </div>
+                                        <div class="solutions__modal-feature-dropdown">
+                                            <div class="solutions__modal-feature-dropdown-inner">
+                                                Прием оплаты банковской картой Visa, Master Card, Золотая Корона
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="solutions__modal-content">
+                                    <h3 class="solutions__modal-heading">
+                                        Sigma 5 pay
+                                    </h3>
+                                    <div class="solutions__modal-text">
+                                        <p>
+                                            Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру сгенерировать
+                                            несколько абзацев более менее осмысленного текста рыбы на русском языке, а
+                                            начинающему оратору отточить навык публичных выступлений в домашних
+                                            условиях.
+                                        </p>
+                                    </div>
+                                    <div class="solutions__modal-accordions">
+                                        <div class="solutions__modal-accordion js-accordion">
+                                            <div class="solutions__modal-accordion-btn js-accordion-btn">
+                                                <span class="solutions__modal-accordion-btn-text">
+                                                    Технические характеристики
+                                                </span>
+
+                                                <svg width="14" height="14" aria-hidden="true" class="icon-plus">
+                                                    <use xlink:href="#plus"></use>
+                                                </svg>
+                                            </div>
+                                            <div class="solutions__modal-accordion-content js-accordion-content">
+                                                <div class="solutions__modal-accordion-content-inner">
+                                                    <p>
+                                                        Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру
+                                                        сгенерировать несколько абзацев более менее осмысленного текста
+                                                        рыбы
+                                                        на русском языке, а начинающему оратору отточить навык публичных
+                                                        выступлений в домашних условиях.
+                                                    </p>
+                                                    <p>
+                                                        Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру
+                                                        сгенерировать несколько абзацев более менее осмысленного текста
+                                                        рыбы
+                                                        на русском языке, а начинающему оратору отточить навык публичных
+                                                        выступлений в домашних условиях.
+                                                    </p>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="solutions__modal-accordion js-accordion">
+                                            <div class="solutions__modal-accordion-btn js-accordion-btn">
+
+                                                <span class="solutions__modal-accordion-btn-text">
+                                                    Инструкция
+                                                </span>
+                                                <svg width="14" height="14" aria-hidden="true" class="icon-plus">
+                                                    <use xlink:href="#plus"></use>
+                                                </svg>
+                                            </div>
+                                            <div class="solutions__modal-accordion-content js-accordion-content">
+                                                <div class="solutions__modal-accordion-content-inner">
+                                                    <p>
+                                                        Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру
+                                                        сгенерировать несколько абзацев более менее осмысленного текста
+                                                        рыбы
+                                                        на русском языке, а начинающему оратору отточить навык публичных
+                                                        выступлений в домашних условиях.
+                                                    </p>
+                                                    <p>
+                                                        Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру
+                                                        сгенерировать несколько абзацев более менее осмысленного текста
+                                                        рыбы
+                                                        на русском языке, а начинающему оратору отточить навык публичных
+                                                        выступлений в домашних условиях.
+                                                    </p>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <a href="#" class="solutions__modal-link">
+                                            <div class="solutions__modal-link-text">
+                                                Видео распаковки
+                                            </div>
+
+                                            <svg width="14" height="14" aria-hidden="true" class="icon-arrow-right">
+                                                <use xlink:href="#arrow-right"></use>
+                                            </svg>
+                                        </a>
+                                    </div>
+                                    <div class="solutions__modal-bottom-row">
+                                        <div class="solutions__modal-price">
+                                            <h4 class="solutions__modal-price-heading">
+                                                Стоимость
+                                            </h4>
+                                            <div class="solutions__modal-price-amount">
+                                                15000 ₽
+                                            </div>
+                                        </div>
+                                        <a href="#contact-modal" class="solutions__modal-apply-link js-open-modal">
+                                            Отправить заявку
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </li>
                 </ul>
             </div>
@@ -1725,7 +1963,7 @@
                         <div class="partners__card">
                             <img src="img/partners/2.png" alt="" class="partners__card-image">
 
-                             <a href="#partner-16" class="partners__card-modal-link"></a>
+                            <a href="#partner-16" class="partners__card-modal-link"></a>
 
                             <div class="partners__card-content js-modal" id="partner-16">
                                 <div class="partners__card-content-inner">
