--- a/src/scss/_solutions.scss
+++ b/src/scss/_solutions.scss
@@ -213,18 +213,28 @@
         transition: opacity 0.4s, visibility 0.4s;
     }
 
-
     @include breakpoint(mobile) {
-        display: none;
+        display: flex;
+        flex-direction: column;
+        padding: 0 var(--content-padding);
+        padding-bottom: 4rem;
+        padding-top: 1.5rem;
     }
 }
 
 .solutions__modal-inner {
-    padding: 6rem 0;
-    flex-grow: 1;
-    display: grid;
-    grid-template-columns: minmax(0, 1fr) 8.5rem minmax(0, 1fr);
-    position: relative;
+    @include breakpointMF(small-tablet) {
+        padding: 6rem 0;
+        flex-grow: 1;
+        display: grid;
+        grid-template-columns: minmax(0, 1fr) 8.5rem minmax(0, 1fr);
+        position: relative;
+    }
+
+    @include breakpoint(mobile) {
+        display: flex;
+        flex-direction: column;
+    }
 }
 
 .solutions__modal-close {
@@ -249,16 +259,34 @@
         transition: fill 0.2s;
     }
 
+    @include breakpoint(mobile) {
+        width: 3rem;
+        height: 3rem;
+        margin-left: auto;
+        position: static;
+        svg {
+            width: 1rem;
+            height: 1rem;
+        }
+    }
+
     .no-touch &:hover {
         background-color: var(--primary-color);
     }
 }
 
 .solutions__modal-illustration {
-    grid-row: 1 / 2;
-    grid-column: 1 / 3;
     position: relative;
-    align-self: flex-start;
+    @include breakpointMF(small-tablet) {
+        grid-row: 1 / 2;
+        grid-column: 1 / 3;
+       
+        align-self: flex-start;
+    }
+
+    @include breakpoint(mobile) {
+        order: 2;
+    }
 }
 
 .solutions__modal-feature {
@@ -275,12 +303,17 @@
     opacity: 0;
     visibility: hidden;
     transition: opacity 0.3s, visibility 0s linear 0.3s;
-    filter: drop-shadow(.2rem .2rem 0 white);
+    filter: drop-shadow(0.2rem 0.2rem 0 white);
+
+    @include breakpoint(mobile) {
+        padding-bottom: 2.5rem;
+        left: 0;
+    }
 
     .solutions__modal-feature.active & {
         opacity: 1;
         visibility: inherit;
-        transition: opacity .3s, visibility .3s;
+        transition: opacity 0.3s, visibility 0.3s;
     }
 }
 
@@ -297,6 +330,14 @@
     padding: 2rem;
     position: relative;
     z-index: 1;
+
+    @include breakpoint(mobile) {
+        padding: 1.5rem;
+        border-radius: 1rem;
+        line-height: 1.4;
+        font-size: 1.2rem;
+        max-width: 18rem;
+    }
     &::before {
         content: '';
         position: absolute;
@@ -309,6 +350,12 @@
         background-repeat: no-repeat;
         top: 100%;
         left: 1.4rem;
+
+        @include breakpoint(mobile) {
+            width: 1.8rem;
+            height: 1.8rem;
+            left: 1.2rem;
+        }
     }
 }
 
@@ -327,7 +374,11 @@
     cursor: pointer;
     transform: translateZ(0);
 
- 
+    @include breakpoint(mobile) {
+        width: 3.2rem;
+        height: 3.2rem;
+    }
+
     &::before {
         content: '';
         position: absolute;
@@ -339,7 +390,12 @@
         border-radius: 50%;
         background: rgba(255, 255, 255, 0.1);
         z-index: -1;
-        transition: opacity .2s;
+        transition: opacity 0.2s;
+
+        @include breakpoint(mobile) {
+            width: 5.2rem;
+            height: 5.2rem;
+        }
     }
     svg {
         width: 1.5rem;
@@ -347,12 +403,15 @@
         fill: black;
         transition: transform 0.2s;
         transform: rotate(-45deg);
+
+        @include breakpoint(mobile) {
+            width: 1rem;
+            height: 1rem;
+        }
     }
 
     .solutions__modal-feature.active & {
         background-color: var(--primary-color);
-
-       
 
         &::before {
             opacity: 0;
@@ -371,12 +430,18 @@
 }
 
 .solutions__modal-content {
-    grid-row: 1 / 2;
-    grid-column: 3 / -1;
-    display: flex;
-    flex-direction: column;
-    padding-right: 12rem;
-    padding-top: 6rem;
+    @include breakpointMF(small-tablet) {
+        grid-row: 1 / 2;
+        grid-column: 3 / -1;
+        display: flex;
+        flex-direction: column;
+        padding-right: 12rem;
+        padding-top: 6rem;
+    }
+
+    @include breakpoint(mobile) {
+        display: contents;
+    }
 }
 
 .solutions__modal-heading {
@@ -385,6 +450,14 @@
     font-size: 5.4rem;
     line-height: 115%;
     margin-bottom: 3rem;
+
+    @include breakpoint(mobile) {
+        font-style: normal;
+        font-weight: 600;
+        font-size: 2.6rem;
+        line-height: 115%;
+        margin-bottom: 1.8rem;
+    }
 }
 
 .solutions__modal-text {
@@ -394,10 +467,21 @@
     color: #c1c1c1;
     font-family: var(--cofo);
     margin-bottom: 5rem;
+
+    @include breakpoint(mobile) {
+        font-weight: normal;
+        font-size: 1.2rem;
+        line-height: 140%;
+        margin-bottom: 2rem;
+    }
 }
 
 .solutions__modal-accordions {
     margin-bottom: 5rem;
+
+    @include breakpoint(mobile) {
+        order: 3;
+    }
 }
 
 .solutions__modal-accordion {
@@ -413,6 +497,14 @@
     cursor: pointer;
     min-height: 7.8rem;
     padding: 1.5rem 0;
+
+    @include breakpoint(mobile) {
+        font-weight: normal;
+        font-size: 1.4rem;
+        line-height: 125%;
+        min-height: 4.5rem;
+        padding: 0.7rem 0;
+    }
     svg {
         width: 1.6rem;
         height: 1.6rem;
@@ -420,6 +512,10 @@
         flex-shrink: 0;
         margin-left: 3rem;
         transition: transform 0.2s;
+
+        @include breakpoint(mobile) {
+            margin-left: 2rem;
+        }
     }
 
     .solutions__modal-accordion.active & {
@@ -438,12 +534,26 @@
     border-bottom: 1px solid rgba(255, 255, 255, 0.27);
     min-height: 7.8rem;
     padding: 1.5rem 0;
+
+    @include breakpoint(mobile) {
+        font-weight: normal;
+        font-size: 1.4rem;
+        line-height: 125%;
+        min-height: 4.5rem;
+        padding: 0.7rem 0;
+    }
     svg {
         width: 2.1rem;
         height: 2.3rem;
         fill: white;
         flex-shrink: 0;
         margin-left: 3rem;
+
+        @include breakpoint(mobile) {
+            width: 1.7rem;
+            height: 1.7rem;
+            margin-left: 2rem;
+        }
     }
 }
 
@@ -479,6 +589,10 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+
+    @include breakpoint(mobile) {
+        order: 6;
+    }
 }
 
 .solutions__modal-price {
@@ -493,6 +607,13 @@
     text-transform: uppercase;
     color: #c1c1c1;
     margin-bottom: 2.2rem;
+
+    @include breakpoint(mobile) {
+        font-weight: normal;
+        font-size: 1.2rem;
+        line-height: 140%;
+        margin-bottom: 1rem;
+    }
 }
 
 .solutions__modal-price-amount {
@@ -501,6 +622,13 @@
     font-size: 6.8rem;
     line-height: 0.8;
     color: white;
+
+    @include breakpoint(mobile) {
+        font-style: normal;
+        font-weight: 600;
+        font-size: 2.8rem;
+        line-height: 0.8;
+    }
 }
 
 .solutions__modal-apply-link {
