--- a/src/pages/index.hbs
+++ b/src/pages/index.hbs
@@ -1178,6 +1178,211 @@
 </section>
 
 <section class="section">
+    <div class="reviews js-reviews">
+        <div class="container">
+
+            <div class="reviews__row">
+                <div class="reviews__col">
+                    <h2 class="reviews__heading">
+                        Отзывы
+                    </h2>
+                    <div class="reviews__authors-slider">
+                        <div class="swiper-container">
+                            <div class="swiper-wrapper">
+                                <div class="swiper-slide">
+                                    <div class="reviews__authors-slider-card">
+                                        <div class="reviews__authors-slider-card-photo-container">
+                                            <img src="img/author.jpg" alt="" class="reviews__authors-slider-card-photo">
+                                        </div>
+                                        <div class="reviews__authors-slider-card-content">
+
+
+                                            <div class="reviews__authors-slider-card-rating">
+                                                <svg width="14" height="14" aria-hidden="true" class="icon-star-filled">
+                                                    <use xlink:href="#star-filled"></use>
+                                                </svg>
+                                                <svg width="14" height="14" aria-hidden="true" class="icon-star-filled">
+                                                    <use xlink:href="#star-filled"></use>
+                                                </svg>
+                                                <svg width="14" height="14" aria-hidden="true" class="icon-star-filled">
+                                                    <use xlink:href="#star-filled"></use>
+                                                </svg>
+                                                <svg width="14" height="14" aria-hidden="true" class="icon-star-filled">
+                                                    <use xlink:href="#star-filled"></use>
+                                                </svg>
+                                                <svg width="14" height="14" aria-hidden="true" class="icon-star">
+                                                    <use xlink:href="#star"></use>
+                                                </svg>
+                                            </div>
+                                            <div class="reviews__authors-slider-card-name">
+                                                Алена Новосельцева
+                                            </div>
+                                            <div class="reviews__authors-slider-card-info">
+                                                Название магазина: <b>Мир Мебели</b><br>
+                                                Город: <b>Москва</b>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="swiper-slide">
+                                    <div class="reviews__authors-slider-card">
+                                        <div class="reviews__authors-slider-card-photo-container">
+                                            <img src="img/author.jpg" alt="" class="reviews__authors-slider-card-photo">
+                                        </div>
+                                        <div class="reviews__authors-slider-card-content">
+
+
+                                            <div class="reviews__authors-slider-card-rating">
+                                                <svg width="14" height="14" aria-hidden="true" class="icon-star-filled">
+                                                    <use xlink:href="#star-filled"></use>
+                                                </svg>
+                                                <svg width="14" height="14" aria-hidden="true" class="icon-star-filled">
+                                                    <use xlink:href="#star-filled"></use>
+                                                </svg>
+                                                <svg width="14" height="14" aria-hidden="true" class="icon-star-filled">
+                                                    <use xlink:href="#star-filled"></use>
+                                                </svg>
+                                                <svg width="14" height="14" aria-hidden="true" class="icon-star-filled">
+                                                    <use xlink:href="#star-filled"></use>
+                                                </svg>
+                                                <svg width="14" height="14" aria-hidden="true" class="icon-star">
+                                                    <use xlink:href="#star"></use>
+                                                </svg>
+                                            </div>
+                                            <div class="reviews__authors-slider-card-name">
+                                                Алена Новосельцева
+                                            </div>
+                                            <div class="reviews__authors-slider-card-info">
+                                                Название магазина: <b>Мир Мебели</b><br>
+                                                Город: <b>Москва</b>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="swiper-slide">
+                                    <div class="reviews__authors-slider-card">
+                                        <div class="reviews__authors-slider-card-photo-container">
+                                            <img src="img/author.jpg" alt="" class="reviews__authors-slider-card-photo">
+                                        </div>
+                                        <div class="reviews__authors-slider-card-content">
+
+
+                                            <div class="reviews__authors-slider-card-rating">
+                                                <svg width="14" height="14" aria-hidden="true" class="icon-star-filled">
+                                                    <use xlink:href="#star-filled"></use>
+                                                </svg>
+                                                <svg width="14" height="14" aria-hidden="true" class="icon-star-filled">
+                                                    <use xlink:href="#star-filled"></use>
+                                                </svg>
+                                                <svg width="14" height="14" aria-hidden="true" class="icon-star-filled">
+                                                    <use xlink:href="#star-filled"></use>
+                                                </svg>
+                                                <svg width="14" height="14" aria-hidden="true" class="icon-star-filled">
+                                                    <use xlink:href="#star-filled"></use>
+                                                </svg>
+                                                <svg width="14" height="14" aria-hidden="true" class="icon-star">
+                                                    <use xlink:href="#star"></use>
+                                                </svg>
+                                            </div>
+                                            <div class="reviews__authors-slider-card-name">
+                                                Алена Новосельцева
+                                            </div>
+                                            <div class="reviews__authors-slider-card-info">
+                                                Название магазина: <b>Мир Мебели</b><br>
+                                                Город: <b>Москва</b>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="reviews__col">
+                    <div class="reviews__slider-progress">
+
+                    </div>
+                    <div class="reviews__quotes-slider">
+                        <div class="swiper-container">
+                            <div class="swiper-wrapper">
+                                <div class="swiper-slide">
+                                    <div class="reviews__quotes-slider-card">
+                                        <div class="reviews__quotes-slider-card-photo-container">
+                                            <img src="img/author.jpg" alt="" class="reviews__quotes-slider-card-photo">
+                                        </div>
+                                        <div class="reviews__quotes-slider-card-text">
+                                            <p>
+                                                Круто, что вместе с кассой ты получаешь полноценную программу, в которой
+                                                можешь готовить отчеты по работе магазина и контролировать количество
+                                                оставшегося товара. Очень удобно!) Мне все нравиться, даже не могу
+                                                представить, как онлайн касса атол sigma может быть еще лучше)) Советую
+                                                всем.
+                                            </p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="swiper-slide">
+                                    <div class="reviews__quotes-slider-card">
+                                        <div class="reviews__quotes-slider-card-photo-container">
+                                            <img src="img/author.jpg" alt="" class="reviews__quotes-slider-card-photo">
+                                        </div>
+                                        <div class="reviews__quotes-slider-card-text">
+                                            <p>
+                                                Круто, что вместе с кассой ты получаешь полноценную программу, в которой
+                                                можешь готовить отчеты по работе магазина и контролировать количество
+                                                оставшегося товара. Очень удобно!) Мне все нравиться, даже не могу
+                                                представить, как онлайн касса атол sigma может быть еще лучше)) Советую
+                                                всем.
+                                            </p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="swiper-slide">
+                                    <div class="reviews__quotes-slider-card">
+                                        <div class="reviews__quotes-slider-card-photo-container">
+                                            <img src="img/author.jpg" alt="" class="reviews__quotes-slider-card-photo">
+                                        </div>
+                                        <div class="reviews__quotes-slider-card-text">
+                                            <p>
+                                                Круто, что вместе с кассой ты получаешь полноценную программу, в которой
+                                                можешь готовить отчеты по работе магазина и контролировать количество
+                                                оставшегося товара. Очень удобно!) Мне все нравиться, даже не могу
+                                                представить, как онлайн касса атол sigma может быть еще лучше)) Советую
+                                                всем.
+                                            </p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+                    <div class="reviews__controls">
+                        <div class="reviews__pagination">
+
+                        </div>
+                        <div class="reviews__arrows">
+                            <button class="reviews__arrow reviews__arrow--prev">
+                                <svg width="14" height="14" aria-hidden="true" class="icon-arrow-right">
+                                    <use xlink:href="#arrow-right"></use>
+                                </svg>
+                            </button>
+                            <button class="reviews__arrow reviews__arrow--next">
+                                <svg width="14" height="14" aria-hidden="true" class="icon-arrow-right">
+                                    <use xlink:href="#arrow-right"></use>
+                                </svg>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+
+        </div>
+    </div>
+</section>
+
+<section class="section">
     <div class="why-us">
         <div class="container">
 
