--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -160,6 +160,9 @@ svg {
     flex-shrink: 0;
     fill: currentColor;
     transition: fill 0.2s;
+    &.arrow-right {
+        stroke: currentColor;
+    }
 }
 
 img {
