--- a/src/scss/_callback.scss
+++ b/src/scss/_callback.scss
@@ -7,7 +7,7 @@
     @include breakpoint(mobile) {
         display: none;
     }
- 
+
     .modal-open & {
         right: calc(3rem + var(--sb-width, 0));
     }
@@ -24,9 +24,34 @@
     background: #28282a;
     box-shadow: inset 0px 0px 2.7rem rgba(0, 0, 0, 0.4);
     border-radius: 7rem;
+    overflow: hidden;
+    position: relative;
+    z-index: 1;
+
+    &::before {
+        content: '';
+        position: absolute;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        background-color: var(--primary-color);
+        z-index: -1;
+        opacity: 0;
+        transition: opacity 0.2s;
+    }
+
     &:link,
     &:visited {
         color: white;
+    }
+
+    .no-touch &:hover,
+    .touch &:active {
+        color: white;
+        &::before {
+            opacity: 1;
+        }
     }
     svg {
         flex-shrink: 0;
