--- a/src/scss/_demo.scss
+++ b/src/scss/_demo.scss
@@ -27,6 +27,15 @@
     width: 100%;
     height: 100%;
 
+    video {
+        position: absolute;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
+
     @include breakpoint(mobile) {
         height: auto;
         position: relative;
