--- a/src/scss/_intro.scss
+++ b/src/scss/_intro.scss
@@ -100,6 +100,12 @@
         transform: translate(-50%, -50%);
         left: 55%;
         top: 80%;
+        transition: transform .4s;
+
+        .no-touch &:hover,
+        .touch &:active {
+            transform:  translate(-50%, -50%) scale(0.97);
+        }
     }
 
 
