--- a/src/scss/_page-sidebar.scss
+++ b/src/scss/_page-sidebar.scss
@@ -240,6 +240,21 @@
     font-size: 1.4rem;
     line-height: 1.8rem;
     color: #c1c1c1;
+    display: block;
+    position: relative;
+    &::before { 
+        content: '';
+        position: absolute;
+        left: 0;
+        top: 50%;
+        transform: translateY(-50%);
+        background-color: #fff;
+        width: 0.6rem;
+        height: 0.6rem;
+        opacity: 0;
+        transition: opacity .2s;
+        border-radius: 50%;
+    }
 
     &:link,
     &:visited {
@@ -249,6 +264,13 @@
     .no-touch &:hover,
     .touch &:active {
         color: white;
+        .page-sidebar__nav-link-text {
+            transform: translateX(1.5rem);
+        }
+
+        &::before {
+            opacity: 1;
+        }
     }
 
     @include breakpoint(mobile) {
@@ -261,6 +283,10 @@
             color: white;
         }
     }
+}
+
+.page-sidebar__nav-link-text {
+    transition: transform .3s;
 }
 
 .page-sidebar__contacts {
@@ -349,6 +375,10 @@
     &:link,
     &:visited {
         color: #c1c1c1;
+    }
+
+    &:hover {
+        color: white;
     }
 
     &.active {
